--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	    (function() {  // DON'T EDIT BELOW THIS LINE
 	        var d = document, s = d.createElement('script');
 
-	        s.src = '//EXAMPLE.disqus.com/embed.js';
+	        s.src = '//yontemhukukgithubio.disqus.com/embed.js';
 
 	        s.setAttribute('data-timestamp', +new Date());
 	        (d.head || d.body).appendChild(s);
